# native-email

./: CHANGELOG.md  Cargo.toml  QUICKSTART.md  README.md  package-lock.json  package.json
desktop/: README.md  package.json  tailwind.config.js
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
email-core/: Cargo.toml  README.md
email-core/src/: imap.rs  lib.rs  models.rs
tui/: Cargo.toml  README.md
tui/src/: main.rs
